--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -1462,6 +1462,7 @@ the \jslp\ style files. Thanks, Dominik.
 	\item Fix some expl3 code.
 	\item Add \jcsmacro{IfSemesterTF} check (see sec.~\ref{sec:csdata}).
 	\item Add \joption{size} option to \jcsmacro{makebeamerprogram}.
+	\item Fix expansion issue with \textsf{datatool} \texttt{keys} in \textsf{jsmembertable}.
 \end{itemize}
 \item 2025/01/29 (v.\,1.14):
 \begin{itemize}
