--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -87,7 +87,7 @@ colorlinks=false
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.14, 2025/01/29}
+\date{Version 1.15, 2025/10/02}
 
 \maketitle
 
@@ -1457,7 +1457,7 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
-\item Forthcoming (v.\,1.15):
+\item 2025/10/02 (v.\,1.15):
 \begin{itemize}
 	\item Fix some expl3 code.
 	\item Add \jcsmacro{IfSemesterTF} check (see sec.~\ref{sec:csdata}).
