--- a/README
+++ b/README
@@ -68,7 +68,7 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.15 (forthcoming): - Add \IfSemesterTF check.
+* V. 1.15 (2025-10-02):  - Add \IfSemesterTF check.
                          - Add size option to \makebeamerprogram.
                          - Fix expansion issue with datatool keys in jsmembertable.
                          - Fix some expl3 code.
